# OneTwoGame_cpp

./: CMakeLists.txt  README.md  REPORT.md  main.cpp
.claude/: settings.local.json
designDocs/: spec.md
src/kernel/: Combination.h  ComputerAI.cpp  ComputerAI.h  Game.cpp  Game.h  Hand.cpp  Hand.h  IPlayer.h  Move.cpp  Move.h  Session.cpp  Session.h  User.cpp  User.h
tests/: TestFramework.h  test_combination.cpp  test_game.cpp  test_hand.cpp  test_main.cpp  test_move.cpp  test_players.cpp  test_session.cpp
